# AutonomousFish

./: README.md
F-Robot/: AutonomousFish.workspace.user.a9bc83f
F-Robot/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
F-Robot/devel/lib/FControlSystem/: FControlSystem
F-Robot/devel/lib/FGuidance/: FGuidance  GuideSystem
F-Robot/devel/lib/FNaviSystem/: NaviSystem
F-Robot/devel/lib/pkgconfig/: FControlSystem.pc  FGuidance.pc  FNaviSystem.pc  uSerial.pc  xsens_mti_driver.pc
F-Robot/devel/share/FControlSystem/cmake/: FControlSystemConfig.cmake
F-Robot/devel/share/FGuidance/cmake/: FGuidanceConfig.cmake
F-Robot/devel/share/FNaviSystem/cmake/: FNaviSystemConfig.cmake
F-Robot/devel/share/uSerial/cmake/: uSerialConfig.cmake
F-Robot/devel/share/xsens_mti_driver/cmake/: xsens_mti_driverConfig.cmake
F-Robot/src/FControlSystem/: CMakeLists.txt
F-Robot/src/FControlSystem/src/: FControlMain.cpp  slidingmode.cpp  slidingmode.h  usb2can.cpp  usb2can.h
F-Robot/src/FGuidance/: CMakeLists.txt  package.xml
F-Robot/src/FGuidance/scripts/: CubicSpline.py  Guidance_Waypoint.py  listener.py  talker.py
F-Robot/src/FGuidance/src/: FGuideMain.cpp  telemetry.cpp  telemetry.h
F-Robot/src/FNaviSystem/: CMakeLists.txt
F-Robot/src/FNaviSystem/src/: FNaviMain.cpp
F-Robot/src/uSerial/: CMakeLists.txt
F-Robot/src/uSerial/include/uSerial/: uSerial.h
F-Robot/src/uSerial/src/: uSerial.cpp
